NlaStrip Tweak Mode - No automatic action length sync on exit #34645

Closed
opened 2013-03-15 02:31:38 +01:00 by koil · 5 comments

%%%--- Operating System, Graphics card ---
OS: Windows 7 Home Premium SP1 32 bit
Graphics: SIS Mirage 3 Graphics: SIS672 Internel

- Blender version with error, and version that worked ---

error: Blender 2.66.0 r54697 windows 32 bit
worked:

- Short description of error ---

Size of the NlaStrip is same after leaving Tweak Mode.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Timeline: select keying set LocRotScale.
3D View: move cube, insert keyframes (i).
Nla Editor: set time 10.
3D View: move cube, insert keyframes (i).
Nla Editor: freeze action.
Nla Editor: select action, tweak mode (TAB).
Nla Editor: set time to 20.
3D view: move cube, insert keyframes (i).
Nla Editor: object mode (TAB).

The size of the NlaStrip is small.
%%%

%%%--- Operating System, Graphics card --- OS: Windows 7 Home Premium SP1 32 bit Graphics: SIS Mirage 3 Graphics: SIS672 Internel - Blender version with error, and version that worked --- error: Blender 2.66.0 r54697 windows 32 bit worked: - Short description of error --- Size of the NlaStrip is same after leaving Tweak Mode. - Steps for others to reproduce the error (preferably based on attached .blend file) --- Timeline: select keying set LocRotScale. 3D View: move cube, insert keyframes (i). Nla Editor: set time 10. 3D View: move cube, insert keyframes (i). Nla Editor: freeze action. Nla Editor: select action, tweak mode (TAB). Nla Editor: set time to 20. 3D view: move cube, insert keyframes (i). Nla Editor: object mode (TAB). The size of the NlaStrip is small. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

%%%Found: NlaEditor: Header: Edit: sync_action_length.

Though should be automated.
Todo or Proposal.%%%

%%%Found: NlaEditor: Header: Edit: sync_action_length. Though should be automated. Todo or Proposal.%%%
Member

%%%The lack of syncing here was somewhat on purpose, although I'm now a bit more open to some tweaks here than I've been since introducing the new system. In the intended workflow here, you're NOT supposed to go creating empty, near empty, or ridiculously short strips, and then start extending them and extending them and extending them :)

  1. This is because in the past, we had terrible issues trying to correctly discern what exactly users did to their actions when it came to syncing time for these strips, making it all to easy to accidentally set the scaling factor to account for changes in length, and gradually squeezing everything in to 0.00000000000000...01 frames with a near-infinity scaling factor. While this was perhaps caused more by a potentially buggy implementation, this also doesn't sound that like such a healthy workflow to begin with, as we should be able to just care about simply keyframing motions as per normal, and THEN trying to retime them as whole units (or to add extra keyframes as separate strips to smooth over rough parts).

  2. Actions aren't always used by a single strip. Having said that, it probably fits more with the "tweaking" concept that the syncing would only occur for the one being tweaked. But...

  3. Sometimes we may actually not want to include the full action range. I'm aware of more than a few cases where you might have a few stray keyframes at the start which were added just to make it easier to have a certain motion flowing smoothly at the start of the action range. In this case, do we want to actually want users to have to constantly re-set the reduced range?

  4. Strips may have other strips surrounding them. If we automatically try to extend the range of strips, it's easy to have situations where there simply isn't any room for the extra keyframes to go (in the current track). However, in the current situation, it is at least possible to see that perhaps there is truncation going on, and adjustments to timing (coinciding with changes in other tracks perhaps too) can be made first, and then the strip can be safely extended.

So really, performing this syncing is a can of worms. IIRC, I've put in a few operators that can be used to perform this syncing manually when needed.%%%

%%%The lack of syncing here was somewhat on purpose, although I'm now a bit more open to some tweaks here than I've been since introducing the new system. In the intended workflow here, you're NOT supposed to go creating empty, near empty, or ridiculously short strips, and then start extending them and extending them and extending them :) 1) This is because in the past, we had terrible issues trying to correctly discern what exactly users did to their actions when it came to syncing time for these strips, making it all to easy to accidentally set the scaling factor to account for changes in length, and gradually squeezing everything in to 0.00000000000000...01 frames with a near-infinity scaling factor. While this was perhaps caused more by a potentially buggy implementation, this also doesn't sound that like such a healthy workflow to begin with, as we should be able to just care about simply keyframing motions as per normal, and THEN trying to retime them as whole units (or to add extra keyframes as separate strips to smooth over rough parts). 2) Actions aren't always used by a single strip. Having said that, it probably fits more with the "tweaking" concept that the syncing would only occur for the one being tweaked. But... 3) Sometimes we may actually not want to include the full action range. I'm aware of more than a few cases where you might have a few stray keyframes at the start which were added just to make it easier to have a certain motion flowing smoothly at the start of the action range. In this case, do we want to actually want users to have to constantly re-set the reduced range? 4) Strips may have other strips surrounding them. If we automatically try to extend the range of strips, it's easy to have situations where there simply isn't any room for the extra keyframes to go (in the current track). However, in the current situation, it is at least possible to see that perhaps there is truncation going on, and adjustments to timing (coinciding with changes in other tracks perhaps too) can be made first, and then the strip can be safely extended. So really, performing this syncing is a can of worms. IIRC, I've put in a few operators that can be used to perform this syncing manually when needed.%%%
Member

%%%While just checking on this again, I found that there was an unused define for this lurking around in the background. As a result, I've exposed this so that this behaviour can be enabled on strips that need it (though I must point out that it's still a bit rough).

See r.56314 for fix. Closing as "fixed" now :)%%%

%%%While just checking on this again, I found that there was an unused define for this lurking around in the background. As a result, I've exposed this so that this behaviour can be enabled on strips that need it (though I must point out that it's still a bit rough). See r.56314 for fix. Closing as "fixed" now :)%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34645
No description provided.